--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ __pycache__/
 
 # C extensions
 *.so
-.idea
 # Distribution / packaging
 .Python
 build/
@@ -136,4 +135,5 @@ dmypy.json
 *.mp3
 *.wav
 *.m4a
+*.ogg
 
